# libgedit-gfls

./: NEWS  README.md  libgedit-gfls.doap  meson.build  meson_options.txt
docs/: file-loading.md  generic-and-extensible.md  get-file-info-attributes.md  low-level-features.md  low-level-kit.md  names.md  simple-implementation-first.md  split-backend-frontend.md
docs/reference/: libgedit-gfls-docs.xml  libgedit-gfls-sections.txt  meson.build
docs/reference/xml/: meson.build
gfls/: gfls-attribute-keys.c  gfls-attribute-keys.h  gfls-init.c  gfls-init.h  gfls-input-stream.c  gfls-input-stream.h  gfls-loader-basic.c  gfls-loader-basic.h  gfls-loader-config-simple.c  gfls-loader-config-simple.h  gfls-loader-config.c  gfls-loader-config.h  gfls-unsaved-document-titles.c  gfls-unsaved-document-titles.h  gfls-utf8.c  gfls-utf8.h  gfls.h  meson.build  symbol.map
src/: gfls-gui.c  gfls-input-stream.h  gfls-program.c  gfls-test-race-read-content.c  meson.build
tests/: meson.build
tests/interactive-tests/: gfls-gui.c  gfls-program.c  meson.build
tests/unit-tests/: meson.build  test-attribute-keys.c  test-unsaved-document-titles.c  test-utf8.c
